syntax = "proto3";

option go_package = "mapreduce/mapreduce";
option java_multiple_files = true;
option java_package = "io.grpc.exercise.mapreduce";
option java_outer_classname = "MapReduceProto";

package mapreduce;

service MapReduce {
  rpc GetChunk (Name) returns (Chunk);
  rpc SendChunk (Chunk) returns (Ack);
  rpc GetPartition (Partition) returns (Ack);
}

message Chunk {
  repeated int32 data = 1;
}

message Partition {
  repeated int32 sorted_data = 1;
}

message Ack {
  string message = 1;
}

message Name {
  string message = 1;
}

message maxNum{
  int32 message = 1;
}
